# Tetris

./: .gitignore  CMakeLists.txt  Makefile  Readme.md
.devcontainer/: devcontainer.json
include/: mylist.h
include/lib/: input.h  maths.h  strmodif.h
lib/my/: Makefile
lib/my/globals/: globals_methods.c
lib/my/include/: my.h
lib/my/include/lib/: globals.h  linked_lists.h  misc.h  my_printf.h  output.h  strcheck.h
lib/my/input/: my_getnbr.c
lib/my/linked_lists/: my_append_node.c  my_delete_node.c  my_print_list.c  my_revprint_list.c
lib/my/maths/: my_factorial.c  my_pow.c  my_sqrt.c
lib/my/misc/: free_array.c  my_swap.c
lib/my/output/: my_put_nbr.c  my_putchar.c  my_putstr.c  my_show_word_array.c
lib/my/strcheck/: my_char_isalpha.c  my_char_isnum.c  my_char_isprintable.c  my_str_isalpha.c  my_str_islower.c  my_str_isnum.c  my_str_isprintable.c  my_str_isupper.c  my_strcindex.c  my_strcmp.c  my_strcontains.c  my_strlen.c  my_strncmp.c  my_strstr.c
lib/my/strmodif/: dup_double_array.c  my_memset.c  my_revarr.c  my_revstr.c  my_str_to_word_array.c  my_strappend.c  my_strarr.c  my_strcapitalize.c  my_strcat.c  my_strcpy.c  my_strdup.c  my_strinsert.c  my_strlowcase.c  my_strncat.c  my_strncpy.c  my_strpop.c  my_strupcase.c
src/: global_loop.c  main.c
src/args/: check_args.c  check_args_validiti.c  set_args.c
src/debug/: compute.c  display_debug.c  info_on_tetr.c
src/game/ncurses/: destroy_row.c  direction.c  hud_printing.c  inputs.c  physics.c  print_ui.c  resize_term.c  rotation.c  spawn_tetriminos.c
src/init/: init_ncurses.c
src/tetriminos/: build_tetriminos.c  check_files.c  check_shape.c  check_tetriminos.c  rotate.c  setter_tetriminos.c
tetriminos/: bar.tetrimino
